--- a/views/home.html
+++ b/views/home.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <header>
-        <picture class="logoPagina">
+        <picture class="logo-pagina">
             <img src="/images/logo.png" alt="logo" width="100%" height="100%">
         </picture>
         <nav class="menu">
-            <a class="borde" href="/vinos">Vinos</a>
+            <a class="borde" href="/catalogo">Vinos</a>
             <a class="borde" href="/nosotros">Nosotros</a>
             <a href="/contacto">Contacto</a>
         </nav>
@@ -33,15 +33,110 @@
     </header>
     <main>
      <section class="main-content">
-         <article class="foto-texto">
+         <article class="foto-texto-principal">
             <picture class="bodega">
                 <img class="bodegas" src="/images/bodega.jpg" alt="foto"><ul class="text-inicio">
+                </picture>
                     <li class="text-titulo">EWINE | Desde 2021</li>
                     <li class="text-bodega">Al pie de La Cordillera de los Andes, en el corazón del Alto Valle de Uco, creamos y diseñamos vinos que despliegan todo el potencial de un suelo privilegiado. Inmersos en la naturaleza de este entorno único, procuramos el cuidado y evolución del mismo terroir que nos vio nacer hace más de 100 años</li>
                 </ul>
-            </picture>
         </article>
+        <br>
+        <article class="texto-seccion-barra">Destacados</article>
+        <section class="cajadecajas">
+            <article class="vinos">
+                <picture>
+                    <img width="100%" height="70%" src="/images/Rutini-Gewurztraminer.webp" alt="blanco">
+                </picture>
+                <div class="info">
+                <p>Gewurztraminer</p>
+                <p class="aclaracion">Caja x6 botellas</p>
+                <p class="precio">$8.000</p>
+                <button>Agregar</button>
+                </div>
+                </article>
+                <article class="vinos">
+                    <picture>
+                        <img width="100%" height="70%" src="/images/Rutini-Malbec.webp" alt="blanco">
+                    </picture>
+                    <div class="info">
+                    <p>Gewurztraminer</p>
+                    <p class="aclaracion">Caja x6 botellas</p>
+                    <p class="precio">$8.000</p>
+                    <button>Agregar</button>
+                    </div>
+                </article>
+                <article class="vinos">
+                    <picture>
+                        <img width="100%" height="70%" src="/images/Rutini-Rose-de-Malbec.webp" alt="blanco">
+                    </picture>
+                    <div class="info">
+                    <p>Gewurztraminer</p>
+                    <p class="aclaracion">Caja x6 botellas</p>
+                    <p class="precio">$8.000</p>
+                    <button>Agregar</button>
+                    </div>
+                </article>
+                <article class="vinos">
+                    <picture>
+                        <img width="100%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
+                    </picture>
+                    <div class="info">
+                    <p>Gewurztraminer</p>
+                    <p class="aclaracion">Caja x6 botellas</p>
+                    <p class="precio">$8.000</p>
+                    <button>Agregar</button>
+                    </div>
+                </article>    
+    </section>
+    <article class="texto-seccion-barra">Sección de Ofertas</article>
+        <section class="cajadecajas">
+            <article class="vinos">
+                <picture>
+                    <img width="100%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
+                </picture>
+                <div class="info">
+                <p>Gewurztraminer</p>
+                <p class="aclaracion">Caja x6 botellas</p>
+                <p class="precio">$8.000</p>
+                <button>Agregar</button>
+                </div>
+            </article>
+            <article class="vinos">
+                <picture>
+                    <img width="100%" height="70%" src="/images/Trumpeter-Cabernet-Sauvignon.webp" alt="blanco">
+                </picture>
+                <div class="info">
+                <p>Gewurztraminer</p>
+                <p class="aclaracion">Caja x6 botellas</p>
+                <p class="precio">$8.000</p>
+                <button>Agregar</button>
+                </div>
+                </article>
+                <article class="vinos">
+                    <picture>
+                        <img width="100%" height="70%" src="/images/Cajon-Madera-Encuentro-Chardonnay-Malbec-Cabernet-Sauvignon-x3.webp" alt="blanco">
+                    </picture>
+                    <div class="info">
+                    <p>Gewurztraminer</p>
+                    <p class="aclaracion">Caja x6 botellas</p>
+                    <p class="precio">$8.000</p>
+                    <button>Agregar</button>
+                    </div>
+                </article>
+                <article class="vinos">
+                    <picture>
+                        <img width="100%" height="70%" src="/images/Rutini-Rose-de-Malbec.webp" alt="blanco">
+                    </picture>
+                    <div class="info">
+                    <p>Gewurztraminer</p>
+                    <p class="aclaracion">Caja x6 botellas</p>
+                    <p class="precio">$8.000</p>
+                    <button>Agregar</button>
+                    </div>
+                </article>            
         </section>
+    </section>
 
     </main>
     <footer>
@@ -51,7 +146,7 @@
         </picture>   
         <article class="columnas">
             <ul class="link-footer">
-                <li><a class="link-footer-principal" href="/vinos">Vinos</a></li>
+                <li><a class="link-footer-principal" href="/catalogo">Vinos</a></li>
                 <li><a href="/nosotros">Colecciones</a></li>
                 <li><a href="/contacto">Bodegas</a></li>
             </ul>
