--- a/views/home.html
+++ b/views/home.html
@@ -1,99 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel = "stylesheet" href ="/css/header.css">
-    <link rel = "stylesheet" href ="/css/home.css">
-    <link rel = "stylesheet" href ="/css/footer.css">
-    <link rel="stylesheet" href="https://fontawesome.com/icons?d=gallery&m=free">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ewine</title>
+    <link rel="stylesheet" href="/css/normalize.css"> 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    rel="stylesheet" />
+    <link rel="stylesheet" href="https://fontawesome.com/icons?d=gallery&m=free">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
+
+
 </head>
 <body>
-    <header>
-        <picture class="logo-pagina">
-            <img src="/images/logo.png" alt="logo" width="100%" height="100%">
-        </picture>
-        <nav class="menu">
-            <a class="borde" href="/catalogo">Vinos</a>
-            <a class="borde" href="/nosotros">Nosotros</a>
-            <a href="/contacto">Contacto</a>
-        </nav>
-        <section>
-        <form class="searchBar">
-            <input type="search" name="barra" placeholder=" Buscar...">
-        </form>
-        <nav class="carritoUsuario">
-            <a href="" ><i class="fas fa-shopping-cart"></i></a>
-            <a href="" ><i class="fas fa-user"></i></a>
-        </nav>
-        </section>
+    <header class="main-header">
+        <section class="main-header-top-bar">
+            <picture class="logo">
+            <img  src="/images/logo.png" alt="icono">
+                </picture>
+
+                <nav class="main-navbar">
+                    <a href="http://localhost:3040/catalogo.html">Vinos</a>
+                    <a class="borde" href="/nosotros">Nosotros</a>
+                    <a href="/contacto">Contacto</a>
+                </nav>
+
+                    <form action="#" class="formsearch">
+                        <input type="search" name="barra" placeholder="Buscar..."><button class="iconolupa"><i class="fas fa-search"></i></button>
+                    </form>
+            
+                    <nav class="icon-carrito-usuario">
+                        <a href="" ><i class="fas fa-shopping-cart"></i></a>
+                        <a href="" ><i class="fas fa-user"></i></a>
+                    </nav>
+
+                    <div class="burger-menu">
+                        <a class="tresbarras" href="/menu"><i class="fas fa-bars"></i></a>
+                    </div> 
+                </section>           
     </header>
+    <picture>
+        <img class="banner" src="/images/BANNER-VINO.jpg" alt="banner">
+    </picture>    
     <main>
-     <section class="main-content">
-         <article class="foto-texto-principal">
-            <picture class="bodega">
-                <img class="bodegas" src="/images/bodega.jpg" alt="foto"><ul class="text-inicio">
-                </picture>
-                    <li class="text-titulo">EWINE | Desde 2021</li>
-                    <li class="text-bodega">Al pie de La Cordillera de los Andes, en el corazón del Alto Valle de Uco, creamos y diseñamos vinos que despliegan todo el potencial de un suelo privilegiado. Inmersos en la naturaleza de este entorno único, procuramos el cuidado y evolución del mismo terroir que nos vio nacer hace más de 100 años</li>
-                </ul>
+        <section class="foto-texto-principal">
+              <picture class="bodega">
+                <img class="bodegas-tablet" src="/images/Bodega_Montagnac.jpg"
+                alt="Bodega-rutini-tablet">
+                <img class="bodegas-desktop" src="/images/bodega.jpg"
+                alt="Bodega-rutini-desktop">              
+              </picture>
+              <article class="text-titulo-bodega">
+                <p class="text-titulo">EWINE | Desde 2021</p>
+                <p class="text-bodega">Al pie de La Cordillera de los Andes, en el corazón del Alto Valle de Uco, creamos y diseñamos vinos que despliegan todo el potencial de un suelo privilegiado. Inmersos en la naturaleza de este entorno único, procuramos el cuidado y evolución del mismo terroir que nos vio nacer hace más de 100 años.</p>
+              </article>
+        </section>
+        <article class="titulares">Destacados</article>
+        <section class="cajadecajas">
+        <article class="vinos">
+            <picture>
+                 <img width="90%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
+            </picture>
+            <div class="info">
+            <p>Gewurztraminer</p>
+            <p class="aclaracion">Caja x6 botellas</p>
+            <p class="precio">$8.000</p>
+            <button>Agregar</button>
+            </div>
         </article>
-        <br>
-        <article class="texto-seccion-barra">Destacados</article>
-        <section class="cajadecajas">
-            <article class="vinos">
-                <picture>
-                    <img width="100%" height="70%" src="/images/Rutini-Gewurztraminer.webp" alt="blanco">
-                </picture>
-                <div class="info">
-                <p>Gewurztraminer</p>
-                <p class="aclaracion">Caja x6 botellas</p>
-                <p class="precio">$8.000</p>
-                <button>Agregar</button>
-                </div>
-                </article>
-                <article class="vinos">
-                    <picture>
-                        <img width="100%" height="70%" src="/images/Rutini-Malbec.webp" alt="blanco">
-                    </picture>
-                    <div class="info">
-                    <p>Gewurztraminer</p>
-                    <p class="aclaracion">Caja x6 botellas</p>
-                    <p class="precio">$8.000</p>
-                    <button>Agregar</button>
-                    </div>
-                </article>
-                <article class="vinos">
-                    <picture>
-                        <img width="100%" height="70%" src="/images/Rutini-Rose-de-Malbec.webp" alt="blanco">
-                    </picture>
-                    <div class="info">
-                    <p>Gewurztraminer</p>
-                    <p class="aclaracion">Caja x6 botellas</p>
-                    <p class="precio">$8.000</p>
-                    <button>Agregar</button>
-                    </div>
-                </article>
-                <article class="vinos">
-                    <picture>
-                        <img width="100%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
-                    </picture>
-                    <div class="info">
-                    <p>Gewurztraminer</p>
-                    <p class="aclaracion">Caja x6 botellas</p>
-                    <p class="precio">$8.000</p>
-                    <button>Agregar</button>
-                    </div>
-                </article>    
+        <article class="vinos">
+            <picture>
+                <img width="90%" height="70%" src="/images/Rutini-Malbec.webp" alt="blanco">
+            </picture>
+            <div class="info">
+            <p>Gewurztraminer</p>
+            <p class="aclaracion">Caja x6 botellas</p>
+            <p class="precio">$8.000</p>
+            <button>Agregar</button>
+            </div>
+            </article>
+        <article class="vinos">
+            <picture>
+                <img width="90%" height="70%" src="/images/Rutini-Rose-de-Malbec.webp" alt="blanco">
+            </picture>
+            <div class="info">
+            <p>Gewurztraminer</p>
+            <p class="aclaracion">Caja x6 botellas</p>
+            <p class="precio">$8.000</p>
+            <button>Agregar</button>
+            </div>
+        </article>
+        <article class="vinos">
+            <picture>
+                <img width="90%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
+            </picture>
+            <div class="info">
+            <p>Gewurztraminer</p>
+            <p class="aclaracion">Caja x6 botellas</p>
+            <p class="precio">$8.000</p>
+            <button>Agregar</button>
+            </div>
+        </article>    
     </section>
-    <article class="texto-seccion-barra">Sección de Ofertas</article>
+    <br>
+    <article class="titulares">Sección de Ofertas</article>
         <section class="cajadecajas">
             <article class="vinos">
                 <picture>
-                    <img width="100%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
+                    <img width="90%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
                 </picture>
                 <div class="info">
                 <p>Gewurztraminer</p>
@@ -104,7 +121,7 @@
             </article>
             <article class="vinos">
                 <picture>
-                    <img width="100%" height="70%" src="/images/Trumpeter-Cabernet-Sauvignon.webp" alt="blanco">
+                    <img width="90%" height="70%" src="/images/Trumpeter-Cabernet-Sauvignon.webp" alt="blanco">
                 </picture>
                 <div class="info">
                 <p>Gewurztraminer</p>
@@ -112,36 +129,34 @@
                 <p class="precio">$8.000</p>
                 <button>Agregar</button>
                 </div>
-                </article>
-                <article class="vinos">
-                    <picture>
-                        <img width="100%" height="70%" src="/images/Cajon-Madera-Encuentro-Chardonnay-Malbec-Cabernet-Sauvignon-x3.webp" alt="blanco">
-                    </picture>
-                    <div class="info">
-                    <p>Gewurztraminer</p>
-                    <p class="aclaracion">Caja x6 botellas</p>
-                    <p class="precio">$8.000</p>
-                    <button>Agregar</button>
-                    </div>
-                </article>
-                <article class="vinos">
-                    <picture>
-                        <img width="100%" height="70%" src="/images/Rutini-Rose-de-Malbec.webp" alt="blanco">
-                    </picture>
-                    <div class="info">
-                    <p>Gewurztraminer</p>
-                    <p class="aclaracion">Caja x6 botellas</p>
-                    <p class="precio">$8.000</p>
-                    <button>Agregar</button>
-                    </div>
-                </article>            
-        </section>
+            </article>
+            <article class="vinos">
+                <picture>
+                    <img width="90%" height="70%" src="/images/Cajon-Madera-Encuentro-Chardonnay-Malbec-Cabernet-Sauvignon-x3.webp" alt="blanco">
+                </picture>
+                <div class="info">
+                <p>Gewurztraminer</p>
+                <p class="aclaracion">Caja x6 botellas</p>
+                <p class="precio">$8.000</p>
+                <button>Agregar</button>
+                </div>
+            </article>
+            <article class="vinos">
+                <picture>
+                    <img width="90%" height="70%" src="/images/Rutini-Rose-de-Malbec.webp" alt="blanco">
+                </picture>
+                <div class="info">
+                <p>Gewurztraminer</p>
+                <p class="aclaracion">Caja x6 botellas</p>
+                <p class="precio">$8.000</p>
+                <button>Agregar</button>
+                </div>
+            </article>
     </section>
-
     </main>
     <footer>
         <section class="main-foot-bar">
-  <picture class="logo">
+  <picture class="logo-footer">
             <img src="/images/copa.png" alt="logo" width="100%" height="100%">
         </picture>   
         <article class="columnas">
@@ -161,7 +176,7 @@
                 <li><a href="https://es.wikipedia.org/wiki/Mendoza_(Argentina)" target="_blank">Oficinas Mendoza</a></li>
             </ul>
         </article>
-        <picture class="logo">
+        <picture class="logo-footer">
             <img src="/images/nombre.png" alt="logo" width="100%" height="100%">
         </picture>
     </section>
@@ -175,3 +190,4 @@
     </footer>
 </body>
 </html>
+
